issues with the z-index for #hero-box

--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -23,6 +23,8 @@ header{
     height: 200px;
     background-color:rgb(125, 125, 134);
     margin-bottom: 200px;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 footer{
@@ -65,7 +67,8 @@ footer .social img{
 
 nav{
     display: flex;
-    justify-content: space-around;
+    /* display: block; */
+    justify-content: space-around;    
 }
 
 nav a {
@@ -80,8 +83,8 @@ nav a:hover{
     background-color: beige;
     color: black;
     padding: 35px;
-    width: 5px;
-    height: 5px;
+    /* width: 5px; */
+    /* height: 5px; */
 }
 
 #hero-msg h1, #hero-msg h4{
@@ -191,9 +194,28 @@ h2{
     align-self: center;
 }
 
+
 .rivers-card, .camping-card, .rapids-card{
     margin: 200px 0;
 }
+
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3
+}
+
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+
+
 
 .card-img{
     border: 10px solid black;
@@ -221,6 +243,11 @@ h2{
     width: 80px;
 }
 
+.home-grid{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
 
 
 @media screen and (max-width: 900px) {
@@ -234,7 +261,6 @@ h2{
     nav a {
         display: block;
         padding: 15px;
-        text-decoration: none;
     }
     #hero {
         margin-top: 0;
@@ -256,8 +282,7 @@ h2{
         width: 60%;
     }
     #background {
-        /* display: none; */
-        height: 725px;
+        display: none;
     }
     .mountains, .msg {
         width: 80%;
